--- a/m10-11/src/index.html
+++ b/m10-11/src/index.html
@@ -8,7 +8,7 @@
     />
   </head>
 
-  <body style="padding: 10px">
+  <body class="p-4">
     <!-- Завдання 1 -->
     <h2>Завдання 1.</h2>
     <p>
